updated dat shizzle